--- a/lib/mugwarrior_web/templates/layout/app.html.eex
+++ b/lib/mugwarrior_web/templates/layout/app.html.eex
@@ -11,13 +11,17 @@
     <header>
       <section class="container">
         <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
+          <ul class="nav nav-pills">
+          <%= if is_nil @conn.assigns[:current_user] do %>
+            <li><%= link gettext("Create Account"), to: Routes.signup_user_path(@conn, :new) %></li>
+            <li><%= link gettext("Log In"), to: Routes.auth_user_path(@conn, :new) %></li>
+          <% else %>
+            <li><%= link gettext("Edit Profile"), to: Routes.profile_path(@conn, :edit) %></li>
+            <li><%= link gettext("Logout"), to: Routes.auth_user_path(@conn, :delete), method: :post%></li>
+          <% end %>
           </ul>
         </nav>
-        <a href="http://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
+        <%= link(img_tag(Routes.static_path(@conn, "/images/phoenix.png"), alt: "MugWarrior Logo"), to: Routes.page_path(@conn, :index)) %>
       </section>
     </header>
     <main role="main" class="container">
